--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
                     <li class="roulette-ten"><span>Chiqueto</span></li>
                 </ul>
             </div>
-            <button class="start">Iniciar</button>
+            <div>
+                <button id="start" class="start">
+                    <span>I</span>
+                    <span>n</span>
+                    <span>i</span>
+                    <span>c</span>
+                    <span>i</span>
+                    <span>a</span>
+                    <span>r</span>
+                </button>
+            </div>
         </article>
     </main>
     <script src="js/index.js"></script>
